    handle EPrint editing
 * Added get_last_stage_id to Workflow for use by button bars/blisters
 * Added process to Workflow - this is the equivalent of the SubmissionForm
    method, but greatly trimmed down and not reliant on any specific 
	stages.
 * Tided Stage to only require the stage XML and Workflow object on 
    construction.
 * Stage now pulls the 'surround' choice from the <component> if it's
    there. Could probably move to a <surround> config option later.
 * Added ReviewComponent (currently a null component), PlaceHolder (for
    when components can't load), and ButtonBar (renders prev/next etc).
 * Added the None surround - renders a component with no extra decoration.

2006-06-16

 * Loads of work on cgi/epint to make it have a neat interface.

2006-06-19

 * Fixed bug in generate_static which used "body" instead of "page"
    as the part name for generating pages.

2006-06-21 moj

 * Updated CSS for the control tabs + action bar
 * Interface/EPrint/Control and Interface/EPrint now use the actions as defined
    on the wiki.
 * Added 'interface' method to Interface/EPrint - this returns the prefix for
    any phrases.
 * allow_action now has the same functionality as edit_eprint

2006-06-26 cjg

 * Reverted some changes to CSS and phrases by moj :)
 * Added Compound fields
 * Removed hasid support
 * Added object passing to all render and input field methods
 * Added code for set_value and get_value to do something special for compound
    fields. 
 * and get_data too.
 * Added concept of virtual fields for fields which do not exist in the
    database.
 * Added export links tabs to eprint control page

2006-06-27 cjg

 * Another fix to the tab css
 * Added "edit" tabs to the control page
 * Added javascript to switch between tabs
 * Fixed issue with // in a stylesheet
 * Added padder to stop problem with script tags being collapsed.

2006-07-05 cjg

 * Fixed a bug in the history rendering of xml diffs